5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1753_1521.log
== TEST (2019-05-16 18:09:21) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:22:09) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- EXECUTION TIME:
747.274
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:

-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:22:09) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:22:09) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:22:09) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- EXECUTION TIME:
746.676
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:

-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:22:09) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- EXECUTION TIME:
746.008
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:

-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:22:09) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- EXECUTION TIME:
750.449
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:

-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:22:09) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:22:09) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- EXECUTION TIME:
746.362
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:

-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:

-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:22:09) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma
-- ERROR:
File "XXXX", line 12
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:22:09) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- EXECUTION TIME:
746.669
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:

-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:

-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:28:54) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- ERROR:
File "XXXX", line 12
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:29:19) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- ERROR:
File "XXXX", line 12
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:29:19) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- ERROR:
File "XXXX", line 12
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:51) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<cn):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- ERROR:
File "XXXX", line 12
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:34:01) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q>et):
	i=i+1
	b=b+1
	soma=soma+q*et
print(soma)
-- ERROR:
File "XXXX", line 12
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:34:43) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*et
print(soma)
-- ERROR:
File "XXXX", line 12
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:34:44) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*et
print(soma)
-- ERROR:
File "XXXX", line 12
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:36:21) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+cn*et
print(soma)
-- ERROR:
File "XXXX", line 12
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:36:46) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+cn*et
print(soma)
-- ERROR:
File "XXXX", line 12
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:51:01) 
-- CODE:
cn=int(input("digite a capacidade de navios"))
et=int(input("digite o estoque inicial"))
q=int(input("digite a quantidade de containers")) 
soma=0
i=0
b=0
while(q<et):
	i=i+1
	b=b+1
	soma=soma+q*cn
print(soma)
-- EXECUTION TIME:
471.527
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
